[package]
name = "mysqltest"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = {version = "4.5.43", features = ["derive", "env", "cargo"]}
crc32fast = "1.5.0"
futures-util = "0.3.31"
log = "0.4.27"
log4rs = {version = "1.3.0", features=["all_components", "config_parsing", "toml_format"]}
mysql_async = {version = "0.36.1", features = ["binlog"]}
mysql_common = "0.35.5"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["serde_derive"]}
tokio = {version = "1.47.1", features = ["full"]}
tokio-stream = "0.1.17"
toml = "0.9.5"
uuid = {version = "1.17.0", features = ["v4"]}
